--- a/src/app/where-ive-worked/where-ive-worked.component.css
+++ b/src/app/where-ive-worked/where-ive-worked.component.css
@@ -57,8 +57,6 @@
   margin-top: 4%;
   position: relative;
   border: none;
-  padding-right: 50px;
-  padding-left: 20px;
   transition: all 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
